small fixed of adaptive and change enviroment of project

--- a/src/index.html
+++ b/src/index.html
@@ -1,28 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Miami</title>
-    <link rel="stylesheet" href="./styles/main.scss">
-    <link
-      rel="shortcut icon"
-      href="./images/favicon.png"
-      type="image/x-icon"
-    >
-    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="stylesheet" href="./styles/main.scss" />
+    <link rel="shortcut icon" href="./images/favicon.png" type="image/x-icon" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
-      rel="stylesheet">
+      rel="stylesheet"
+    />
   </head>
   <body>
     <header class="header">
       <div class="header__container container">
         <div class="header__top">
           <div class="header__phone">
-            <a href="tel:+1 234 555-55-55" class="header__link">+1 234 555-55-55</a>
+            <a href="tel:+1 234 555-55-55" class="header__link"
+              >+1 234 555-55-55</a
+            >
             <a href="tel:+1 234 555-55-55" class="header__phone-img">
-              <img src="./images/Phone.svg" alt="Phone">
+              <img src="./images/Phone.svg" alt="Phone" />
             </a>
           </div>
           <a href="#">
@@ -30,19 +29,23 @@
               src="./images/logo.png"
               alt="Miami Condo Kings logo"
               class="logo header__logo"
-            >
+            />
           </a>
           <div class="header__call">
-            <a href="tel:+1 234 555-55-55" class="header__link">call to order</a>
+            <a href="tel:+1 234 555-55-55" class="header__link"
+              >call to order</a
+            >
           </div>
         </div>
         <div class="rectangle"></div>
         <div>
-          <h1 class="header__title">Miami<br> Condo Kings</h1>
+          <h1 class="header__title">
+            Miami<br />
+            Condo Kings
+          </h1>
         </div>
 
         <nav class="header_nav">
-
           <ul class="nav__list">
             <li class="nav__item">
               <a href="#" class="nav__link">Home</a>
@@ -73,10 +76,10 @@
             <div class="burger__logo-small">
               <a href="#">
                 <img
-                    src="./images/burger_logo.png"
-                    alt="Miami Condo Kings logo"
-                    class="burger__logo burger__header-logo"
-                  >
+                  src="./images/burger_logo.png"
+                  alt="Miami Condo Kings logo"
+                  class="burger__logo burger__header-logo"
+                />
               </a>
             </div>
             <ul class="burger__nav-list">
@@ -90,10 +93,14 @@
                 <a href="#gallery" class="burger__nav-link">Gallery</a>
               </li>
               <li class="burger__nav-item">
-                <a href="#consultation" class="burger__nav-link">Consultation</a>
+                <a href="#consultation" class="burger__nav-link"
+                  >Consultation</a
+                >
               </li>
               <li class="burger__nav-item">
-                <a href="#testimonials" class="burger__nav-link">Testimonials</a>
+                <a href="#testimonials" class="burger__nav-link"
+                  >Testimonials</a
+                >
               </li>
               <li class="burger__nav-item">
                 <a href="#contact" class="burger__nav-link">Contacts</a>
@@ -101,36 +108,48 @@
             </ul>
 
             <div class="burger__phone">
-              <a href="tel:+1 234 555-55-55" class="burger__phone-link">+1 234 555-55-55</a>
-                </a>
+              <a href="tel:+1 234 555-55-55" class="burger__phone-link"
+                >+1 234 555-55-55</a
+              >
             </div>
             <div class="burger__call">
-              <a href="tel:+1 234 555-55-55" class="burger__phone-link burger__call-link" >call to order</a>
+              <a
+                href="tel:+1 234 555-55-55"
+                class="burger__phone-link burger__call-link"
+                >call to order</a
+              >
             </div>
           </div>
         </div>
-
       </div>
     </header>
     <div class="about" id="about">
       <div class="about__container container">
         <div>
-          <h3 class="about__left-title">Miami best <br>Real estate <span><a href="#" class="about__span-title">here</a></span></h3>
+          <h3 class="about__left-title">
+            Miami best <br />Real estate
+            <span><a href="#" class="about__span-title">here</a></span>
+          </h3>
         </div>
         <div class="about__right-title">
-          <h4 class="about__right-heading">Over 50 years experience in love.</h4>
+          <h4 class="about__right-heading">
+            Over 50 years experience in love.
+          </h4>
           <p>
-            Mazel and VA Tsukkerman in his "Analysis of musical works." Pointillism, which originated in the music of the early
-            twentieth century, microforms, found a distant historical.
+            Mazel and VA Tsukkerman in his "Analysis of musical works."
+            Pointillism, which originated in the music of the early twentieth
+            century, microforms, found a distant historical.
           </p>
           <p>
-            The market leader in real estate since 2003. Awards Real Estate Company, 2010, 2011, 2013. More than 200 satisfied
-            customers premium segment. We focus only on new buildings and high-level doskanalno know this area better than other
-            specialists.
-            <br>Working directly with developers - so have more useful information about the profitable deals.
+            The market leader in real estate since 2003. Awards Real Estate
+            Company, 2010, 2011, 2013. More than 200 satisfied customers premium
+            segment. We focus only on new buildings and high-level doskanalno
+            know this area better than other specialists.
+            <br />Working directly with developers - so have more useful
+            information about the profitable deals.
           </p>
           <strong>
-            We will never be late!<br>Guaranteed secure transaction - 100%
+            We will never be late!<br />Guaranteed secure transaction - 100%
           </strong>
         </div>
       </div>
@@ -145,12 +164,12 @@
               src="./images/photos/1.jpg"
               alt="Marina Palms"
               class="photo__img photo__img-big"
-            >
+            />
             <img
               src="./images/photos/2.jpg"
               alt="North Miami Beach"
               class="photo__img photo__img-small"
-            >
+            />
           </div>
           <p class="photos__description">
             <a
@@ -160,7 +179,8 @@
               rel="noopener"
             >
               Marina Palms
-            </a> / North Miami Beach, FL 33162
+            </a>
+            / North Miami Beach, FL 33162
           </p>
 
           <div class="photos">
@@ -168,12 +188,12 @@
               src="./images/photos/3.jpg"
               alt="Edition Residens"
               class="photo__img"
-            >
+            />
             <img
               src="./images/photos/4.jpg"
               alt="Edition Residens Miami Beach"
               class="photo__img"
-            >
+            />
           </div>
           <p class="photos__description">
             <a
@@ -183,7 +203,8 @@
               rel="noopener"
             >
               Edition Residens
-            </a> / Miami Beach, FL 33139
+            </a>
+            / Miami Beach, FL 33139
           </p>
 
           <div class="photos photos__right">
@@ -191,12 +212,12 @@
               src="./images/photos/5.jpg"
               alt="Faena House"
               class="photo__img photo__img-small"
-            >
+            />
             <img
               src="./images/photos/6.jpg"
               alt="Miami Beach"
               class="photo__img photo__img-big"
-            >
+            />
           </div>
           <p class="photos__description">
             <a
@@ -206,14 +227,12 @@
               rel="noopener"
             >
               Faena House
-            </a> / Miami Beach, FL 33140
+            </a>
+            / Miami Beach, FL 33140
           </p>
 
-          <div class="gallery__button">
-            View all
-          </div>
+          <div class="gallery__button">View all</div>
         </div>
-
       </div>
     </div>
 
@@ -222,11 +241,15 @@
         <h2 class="consultation__heading block__heading">Consultation</h2>
         <div class="consultation__main-block">
           <div class="consultation__title">
-            <h3 class="consultation__title-heading">How long have you do <br> yourself a gift?</h3>
-            <p class="consultation__title-p">The procedural change mezzo forte starts izoritmichesky pickup at these moments stop LA
-              Mazel and VA Tsukkerman in his
-              "Analysis of musical works." Pointillism, which originated in the music of the early twentieth century, microforms,
-              found a distant historical.
+            <h3 class="consultation__title-heading">
+              How long have you do <br />
+              yourself a gift?
+            </h3>
+            <p class="consultation__title-p">
+              The procedural change mezzo forte starts izoritmichesky pickup at
+              these moments stop LA Mazel and VA Tsukkerman in his "Analysis of
+              musical works." Pointillism, which originated in the music of the
+              early twentieth century, microforms, found a distant historical.
             </p>
           </div>
           <div class="consyltation__form">
@@ -240,7 +263,7 @@
                   autocomplete="off"
                   placeholder="Name"
                   class="form"
-                >
+                />
               </div>
 
               <div class="form__phone">
@@ -252,7 +275,7 @@
                   required
                   placeholder="Phone 099 000 00 00"
                   class="form"
-                >
+                />
               </div>
 
               <div class="form__email">
@@ -262,7 +285,7 @@
                   id="email"
                   placeholder="Email"
                   class="form"
-                >
+                />
               </div>
 
               <input
@@ -271,7 +294,7 @@
                 onsubmit="onSubmit()"
                 id="Consultation"
                 class="form__button"
-              >
+              />
             </form>
           </div>
         </div>
@@ -288,11 +311,13 @@
                 src="./images/people/Ellipse 1.png"
                 alt="Leslie Mckinney"
                 class="person__photo"
-              >
+              />
             </div>
             <h4 class="person__name">Leslie Mckinney</h4>
             <span class="person__position">CEO</span>
-            <p class="person__title">Nice work, Certificates National Association of Realtors (USA)</p>
+            <p class="person__title">
+              Nice work, Certificates National Association of Realtors (USA)
+            </p>
           </div>
 
           <div class="testimonials__person person">
@@ -301,12 +326,13 @@
                 src="./images/people/Ellipse 2.png"
                 alt="Scarlett Hawkins"
                 class="person__photo"
-              >
+              />
             </div>
             <h4 class="person__name">Scarlett Hawkins</h4>
             <span class="person__position">Senior Vice President</span>
             <p class="person__title">
-              My soul is illuminated by an unearthly joy, as these beautiful spring morning, which I enjoy with all my heart
+              My soul is illuminated by an unearthly joy, as these beautiful
+              spring morning, which I enjoy with all my heart
             </p>
           </div>
 
@@ -316,13 +342,15 @@
                 src="./images/people/Ellipse 3.png"
                 alt="Max Henry"
                 class="person__photo"
-              >
+              />
             </div>
             <h4 class="person__name">Max Henry</h4>
             <span class="person__position">Chief Design Officer</span>
-            <p class="person__title">When my lovely valley of steam rises and half-day sun is above an impermeable</p>
+            <p class="person__title">
+              When my lovely valley of steam rises and half-day sun is above an
+              impermeable
+            </p>
           </div>
-
         </div>
       </div>
     </div>
@@ -335,22 +363,28 @@
             <div class="contact__phone-email">
               <h6 class="contact__small-heading">Phone</h6>
               <span>
-                <a href="tel:+1 234 5555-55-55" class="contact__text">+1 234 5555-55-55</a>
+                <a href="tel:+1 234 5555-55-55" class="contact__text"
+                  >+1 234 5555-55-55</a
+                >
               </span>
               <h6 class="contact__small-heading">Email</h6>
               <span>
-                <a href="mailto:hello@miami.com" class="contact__text">hello@miami.com</a>
+                <a href="mailto:hello@miami.com" class="contact__text"
+                  >hello@miami.com</a
+                >
               </span>
             </div>
             <div class="contact__adress">
               <h6 class="contact__small-heading">Address</h6>
-              <p >
+              <p>
                 <a
                   href="https://www.google.com/maps/search/?api=1&query=400+first+ave.+n.+suite+700+Minneapolis,+MN+55401"
                   target="_blank"
                   rel="noopener"
-                  class="contact__text">
-                  400 first ave. n.<br>suite 700<br>Minneapolis, MN <br>55401
+                  class="contact__text"
+                >
+                  400 first ave. n.<br />suite 700<br />Minneapolis, MN
+                  <br />55401
                 </a>
               </p>
             </div>
@@ -367,7 +401,7 @@
                   autocomplete="off"
                   placeholder="Name"
                   class="form"
-                >
+                />
               </div>
 
               <div class="form__email contact__email">
@@ -378,7 +412,7 @@
                   required
                   placeholder="Email"
                   class="form"
-                >
+                />
               </div>
 
               <div class="form__message">
@@ -387,7 +421,7 @@
                   id="message contact"
                   required
                   class="textarea"
-               ></textarea>
+                ></textarea>
               </div>
 
               <input
@@ -396,7 +430,7 @@
                 onsubmit="onSubmit()"
                 id="Consultation contact"
                 class="form__button contact__button"
-              >
+              />
             </form>
           </div>
         </div>
@@ -410,7 +444,7 @@
             src="./images/logo.png"
             alt="Miami Condo Kings logo"
             class="logo footer__logo"
-          >
+          />
         </a>
       </div>
     </footer>
